--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,17 @@
+cargo-features = ["edition2021"]
+
 [package]
 name = "rustoho"
 version = "0.1.0"
 authors = ["Windymelt <windymelt@3qe.us>"]
-edition = "2018"
+edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-web = "4.0.1"
+actix-web-lab = "0.15.0"
+actix-cors = "0.6.1"
+
+env_logger = "0.9"
+log = "0.4"
