--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,3 @@
-cargo-features = ["edition2021"]
-
 [package]
 name = "rustoho"
 version = "0.1.0"
@@ -15,3 +13,10 @@ actix-cors = "0.6.1"
 
 env_logger = "0.9"
 log = "0.4"
+
+# GraphQL
+juniper = "0.15"
+
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+serde_yaml = "0.8"
