Enrolled titles and characters partially

--- a/characters.yml
+++ b/characters.yml
@@ -1,4 +1,60 @@
-- 1:
-  id: 1
-  name: foobar
+- id: 1
+  name: 博麗霊夢
+  human_factor: 1
+- id: 2
+  name: 霧雨魔理沙
+  human_factor: 1
+- id: 3
+  name: ルーミア
+  human_factor: 0
+- id: 4
+  name: チルノ
+  human_factor: 0
+- id: 5
+  name: 紅美鈴
+  human_factor: 0
+- id: 6
+  name: パチュリー・ノーレッジ
+  human_factor: 1
+- id: 7
+  name: 十六夜咲夜
+  human_factor: 1
+- id: 8
+  name: レミリア・スカーレット
+  human_factor: 0
+- id: 9
+  name: フランドール・スカーレット
+  human_factor: 0
+- id: 10
+  name: 小悪魔
+  human_factor: 0
+- id: 11
+  name: 大妖精
+  human_factor: 0
+- id: 12
+  name: レティ・ホワイトロック
+  human_factor: 0
+- id: 13
+  name: 橙
+  human_factor: 0
+- id: 14
+  name: アリス・マーガトロイド
+  human_factor: 1
+- id: 15
+  name: リリーホワイト
+  human_factor: 0
+- id: 16
+  name: プリズムリバー三姉妹
+  human_factor: 0
+- id: 17
+  name: 魂魄妖夢
   human_factor: 0.5
+- id: 18
+  name: 西行寺幽々子
+  human_factor: 0
+- id: 19
+  name: 八雲藍
+  human_factor: 0
+- id: 20
+  name: 八雲紫
+  human_factor: 0
