added partial characters

--- a/characters.yml
+++ b/characters.yml
@@ -58,3 +58,45 @@
 - id: 20
   name: 八雲紫
   human_factor: 0
+- id: 21
+  name: 伊吹萃香
+  human_factor: 0
+- id: 22
+  name: リグル・ナイトバグ
+  human_factor: 0
+- id: 23
+  name: ミスティア・ローレライ
+  human_factor: 0
+- id: 24
+  name: 上白沢慧音
+  human_factor: 0.5
+- id: 25
+  name: 因幡てゐ
+  human_factor: 0
+- id: 26
+  name: 鈴仙・優曇華院・イナバ
+  human_factor: 0
+- id: 27
+  name: 八意永琳
+  human_factor: 0
+- id: 28
+  name: 蓬莱山輝夜
+  human_factor: 0
+- id: 29
+  name: 藤原妹紅
+  human_factor: 1
+- id: 30
+  name: 射命丸文
+  human_factor: 0
+- id: 31
+  name: メディスン・メランコリー
+  human_factor: 0
+- id: 32
+  name: 風見幽香
+  human_factor: 0
+- id: 33
+  name: 小野塚小町
+  human_factor: 0
+- id: 34
+  name: 四季映姫・ヤマザナドゥ
+  human_factor: 0
