--- a/titles.yml
+++ b/titles.yml
@@ -30,3 +30,68 @@
     - 霧雨魔理沙
     - 十六夜 咲夜
     - チルノ
+- id: 3
+  name: 東方萃夢想
+  published_year: 2004
+  appeared_characters:
+    - 伊吹萃香
+    - 博麗霊夢
+    - 霧雨魔理沙
+    - 十六夜咲夜
+    - アリス・マーガトロイド
+    - パチュリー・ノーレッジ
+    - 魂魄妖夢
+    - レミリア・スカーレット
+    - 西行寺幽々子
+    - 八雲紫
+    - 紅美鈴
+    - 八雲藍
+    - 橙
+- id: 4
+  name: 東方永夜抄
+  published_year: 2004
+  appeared_characters:
+    - リグル・ナイトバグ
+    - ミスティア・ローレライ
+    - 上白沢慧音
+    - 因幡てゐ
+    - 鈴仙・優曇華院・イナバ
+    - 八意永琳
+    - 蓬莱山輝夜
+    - 藤原妹紅
+    - 博麗霊夢
+    - 霧雨魔理沙
+    - 十六夜咲夜
+    - 魂魄妖夢
+    - 八雲紫
+    - アリス・マーガトロイド
+    - レミリア・スカーレット
+    - 西行寺幽々子
+    - 八雲藍
+    - 橙
+    - パチュリー・ノーレッジ
+- id: 5
+  name: 東方花映塚
+  published_year: 2005
+  appeared_characters:
+    - 射命丸文
+    - メディスン・メランコリー
+    - 風見幽香
+    - 小野塚小町
+    - 四季映姫・ヤマザナドゥ
+    - 博麗霊夢
+    - 霧雨魔理沙
+    - 十六夜咲夜
+    - 魂魄妖夢
+    - 鈴仙・優曇華院・イナバ
+    - チルノ
+    - リリカ・プリズムリバー
+    - ミスティア・ローレライ
+    - 因幡てゐ
+    - ルナサ・プリズムリバー
+    - メルラン・プリズムリバー
+    - リリーホワイト
+    - パチュリー・ノーレッジ
+    - レミリア・スカーレット
+    - 西行寺幽々子
+    - 八意永琳
