--- a/characters.yml
+++ b/characters.yml
@@ -100,3 +100,27 @@
 - id: 34
   name: 四季映姫・ヤマザナドゥ
   human_factor: 0
+- id: 35
+  name: 秋静葉
+  human_factor: 0
+- id: 36
+  name: 秋穣子
+  human_factor: 0
+- id: 37
+  name: 鍵山雛
+  human_factor: 0
+- id: 38
+  name: 河城にとり
+  human_factor: 0
+- id: 39
+  name: 犬走椛
+  human_factor: 0
+- id: 40
+  name: 東風谷早苗
+  human_factor: 1
+- id: 41
+  name: 八坂神奈子
+  human_factor: 0
+- id: 42
+  name: 洩矢諏訪子
+  human_factor: 0
