--- a/titles.yml
+++ b/titles.yml
@@ -95,3 +95,51 @@
     - レミリア・スカーレット
     - 西行寺幽々子
     - 八意永琳
+- id: 6
+  name: 東方文花帖
+  published_year: 2005
+  appeared_characters:
+    - 射命丸文
+    - リグル・ナイトバグ
+    - ルーミア
+    - チルノ
+    - レティ・ホワイトロック
+    - アリス・マーガトロイド
+    - 上白沢慧音
+    - 鈴仙・優曇華院・イナバ
+    - 因幡てゐ
+    - メディスン・メランコリー
+    - 紅美鈴
+    - パチュリー・ノーレッジ
+    - 橙
+    - 魂魄妖夢
+    - 十六夜咲夜
+    - レミリア・スカーレット
+    - 八雲藍
+    - 西行寺幽々子
+    - 八意永琳
+    - 蓬莱山輝夜
+    - 小野塚小町
+    - 四季映姫・ヤマザナドゥ
+    - フランドール・スカーレット
+    - 八雲紫
+    - 藤原妹紅
+    - 伊吹萃香
+    - 博麗霊夢
+    - 霧雨魔理沙
+- id: 7
+  name: 東方風神録
+  published_year: 2007
+  appeared_characters:
+    - 秋静葉
+    - 秋穣子
+    - 鍵山雛
+    - 河城にとり
+    - 犬走椛
+    - 東風谷早苗
+    - 八坂神奈子
+    - 洩矢諏訪子
+    - 博麗霊夢
+    - 霧雨魔理沙
+    - 射命丸文
+    - レミリア・スカーレット
